--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,14 @@
       {
         "link-name": "off"
       }
+    ],
+    "button-type": "off",
+    "axe/forms": [
+      "default",
+      {
+        "label": "off",
+        "select-name": "off"
+      }
     ]
   }
 }
